fixed some layout breaks with small and medium devices

--- a/style.css
+++ b/style.css
@@ -161,10 +161,12 @@ body{
 
     
     @media (max-width: 768px) {
-    
+        .display-4{
+            font-size: 40px;
+        }
     }
     @media (max-width: 576px) {
-
+        
     }
 
 
